# repair

./: .gitignore  README.md  activate.sh  pyproject.toml
examples/: 01_load_joint.py  02_apply_damage.py  03_templates.py  04_energy.py  05_optimize.py  06_oracle.py  07_generate_dataset.py  08_train_prior.py  09_inference.py  10_evaluate.py  catalog_types.py  design_joint.py  edit_joint.py  inspect_dataset.py  run_all.py  test_templates.py
src/repair/: __init__.py  charts.py  config.py  damage.py  datagen.py  dataset.py  design.py  energy.py  evaluate.py  inference.py  jwood.py  optimizer.py  prior.py  rasterize.py  reverse.py  templates.py  viz.py
